# SeriousGame

./: CLAUDE.md  Cargo.toml  README.md  index.html  text.txt
map/: body.tsx  serious_games.tiled-session  test_map.json  test_map.tmx
maps/: testMap.json  testMap.tmx
pkg/: package.json  serious_games.d.ts  serious_games.js  serious_games_bg.js  serious_games_bg.wasm.d.ts
shader/: shader.wgsl  shader_pulse.wgsl
src/: camera.rs  game.rs  input.rs  lib.rs  main.rs  player.rs  renderer.rs  shader.wgsl  texture.rs  tile.rs
src/engine/: animation.rs  camera.rs  collision.rs  engine.rs  font.rs  input.rs  map.rs  mod.rs  renderer.rs  texture.rs
src/game/: dialogue.rs  game.rs  main_menu.rs  minigame.rs  minigame_color_switch.rs  minigame_vaccine.rs  minigame_virus.rs  mod.rs  object.rs  player.rs  tile.rs
